# emiyashiro

./: .gitattributes  .gitignore  ANIMATION_SYSTEM_IMPROVEMENTS.md  ASSET_PATH_FIX.md  AUDIO_SYSTEM_IMPLEMENTATION.md  BACKGROUND_SYSTEM_CLARIFICATION.md  BEVY_RESOURCES_ANALYSIS.md  CHANGELOG.md  COMPILATION_FIXES.md  COMPLETION_REPORT.md  CONTRIBUTING.md  Cargo.toml  FINAL_PROJECT_SUMMARY.md  FIXES_SUMMARY.md  FLYING_SHIROU_FIX.md  G-ENGINE-SETUP.md  GAME_ASSETS_REQUIREMENTS.md  IMPLEMENTATION-SUMMARY.md  LATEST_UPDATES.md  MISSING_RESOURCES_REPORT.md  OPTIMIZED_TASKS.md  POPULAR_GAME_RESOURCES.md  PROGRESS_REPORT.md  README.md  SCENE_ENHANCEMENT.md  TASK_STATUS_ANALYSIS.md  UNIFIED_SAVE_SYSTEM_README.md  check_dims.ps1  check_dims.py  debug_save.rs  docker-compose.yml
.cargo/: config.toml
.github/workflows/: rust-ci.yml
.kiro/specs/character-animation-system/: design.md  requirements.md
.kiro/specs/enhanced-pause-save-system/: design.md  tasks.md  (+1 more)
.kiro/steering/: game-development-principles.md  rust-bevy-standards.md
.zed/: debug.json
assets/animations/: hf_shirou.ron  sakura.ron  shirou.ron
assets/config/: gameplay_tuning.ron
assets/levels/: sky_city_of_winds.ldtk
assets/sounds/: README.md
docs/: 2026-architecture-metrics-report.md  2026-architecture-upgrade-tasks.md  2026-best-practice-sources.md  2026-bevy-upgrade-assessment-zh.md  2026-upgrade-status.md  G-ENGINE-SETUP.md  SCENE_ENHANCEMENT.md  ZED_DEBUG_2026.md  animation-system.md  bevy-upgrade-regression-checklist.md  documentation-completeness-audit-2026-02-23.md  hf-shirou-attack-module-design.md  ops-runbook.md  sky-city-level.md  ubuntu-dev-workflow.md  upgrade-list.md
migrations/: 20260712000000_initial.sql
saves/: test_saveDDWW.json
scripts/: audit_hf_shirou_attack_atlases.py  build_sakura_jk_attack_frames.py  generate_sky_city_ldtk.py  generate_sky_city_panorama.py  generate_sky_city_tileset.py  split_hf_shirou_attack_atlases.py
scripts/debug/: build_bin.sh  build_test_runner.sh  run_bin.sh
src/: asset_paths.rs  asset_paths_snippet.rs  components.rs  events.rs  lib.rs  main.rs  protocol.rs  resources.rs  states.rs
src/components/: ai.rs  animation.rs  animation_data.rs  audio.rs  enemy.rs  health.rs  level.rs  mod.rs  network.rs  physics.rs  player.rs  projectile.rs  shirou.rs  ui.rs
src/database/: mod.rs  models.rs  operations.rs  redis.rs
src/plugins/: core.rs  gameplay.rs  mod.rs  netcode.rs  persistence.rs  presentation.rs  server.rs  sky_level.rs  ui.rs
src/systems/: ai.rs  animation.rs  async_file_ops.rs  async_tasks.rs  attack_modules.rs  audio.rs  background.rs  camera.rs  collision.rs  combat.rs  database_service.rs  death.rs  enemy.rs  error_handling.rs  final_integration.rs  frame_animation.rs  game.rs  image_sequence_animation.rs  input.rs  interfaces.rs  menu.rs  mod.rs  network.rs  online_ecosystem.rs  pause_save.rs  player.rs  procedural_assets.rs  save.rs  save_worker.rs  scene_decoration.rs  server_file_ops.rs  settings_ui.rs  setup.rs  shared_utils.rs  shirou.rs  sky_level.rs  sprite_animation.rs  sync_redis.rs  system_sets.rs  text_constants.rs  (+3 more)
src/tests/: animation_tests.rs  camera_tests.rs  components_tests.rs  integration_tests.rs  menu_ui_tests.rs  mod.rs  reference_attack_assets_tests.rs  sky_level_tests.rs  systems_tests.rs
src/tools/: image_processor.rs  mod.rs  spritesheet_generator.rs
(+46 files in other folders)
