[package]
name = "s--emiyashiro"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16", features = ["png", "jpeg"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
flate2 = "1.0"

# 优化编译速度的配置
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
