[package]
name = "s--emiyashiro"
version = "0.1.0"
edition = "2024"

[lib]
name = "s__emiyashiro"
path = "src/lib.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
bevy = { version = "0.17", features = ["png", "jpeg"] }
tokio = { version = "1.0", features = ["full"], optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
flate2 = "1.0"
rand = "0.8"
futures-lite = "2.6.1"
bincode = "1.3"
futures-util = "0.3"

# G-Engine Dependencies
tokio-tungstenite = { version = "0.20", optional = true } # Server WebSocket
gloo-net = { version = "0.4", optional = true } # Client WebSocket (WASM)
redis = { version = "0.23", features = ["tokio-comp"], optional = true }
lapin = { version = "2.3", optional = true } # RabbitMQ

[features]
default = ["client"]
client = ["gloo-net", "tokio", "tokio-tungstenite"]
server = ["tokio", "sqlx", "tokio-tungstenite", "redis", "lapin"]

# 优化编译速度的配置
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
