[package]
name = "s--emiyashiro"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"

[lib]
name = "s_emiyashiro"
path = "src/lib.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
bevy = { version = "0.16", features = ["png", "jpeg"] }
tokio = { version = "1.49", features = ["full"], optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.21", features = ["v4", "serde"] }
flate2 = "1.1"
zstd = "0.13"
blake3 = "1.8"
atomicwrites = "0.4"
rand = "0.10"
futures-lite = "2.6.1"
bincode = "3.0"
futures-util = "0.3"
ron = "0.12"

# G-Engine Dependencies
tokio-tungstenite = { version = "0.28", optional = true } # Server WebSocket
gloo-net = { version = "0.6", optional = true } # Client WebSocket (WASM)
redis = { version = "1.0.4", features = ["tokio-comp"], optional = true }
lapin = { version = "3.7", optional = true } # RabbitMQ

[dev-dependencies]
proptest = "1.10"

[features]
default = ["client"]
client = ["gloo-net", "tokio", "tokio-tungstenite"]
server = ["tokio", "sqlx", "tokio-tungstenite", "redis", "lapin"]

# 优化编译速度的配置
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
